# ribs

./: App.toml  Cargo.toml  Dockerfile  docker-compose.yml  readme.md  ribs.xlsx
.github/workflows/: rust.yml
doc/: Api.md  Battle.md  DockerImage.md  Index.md  Movement.md
scripts/: run.ps1  start.ps1
src/: api.rs  battlefield.rs  configuration.rs  damage.rs  engine.rs  main.rs  player.rs  skills.rs  storage.rs  types.rs  weapons.rs
src/api/: armor.rs  battle.rs  battlefield.rs  combatant.rs  weapons.rs
src/damage/: hit.rs  hitDamage.rs
src/engine/: armor.rs  battle_actions.rs  battle_engine.rs  battle_result.rs  battlefield.rs  combatant.rs  combatant_turn.rs  damage.rs  err.rs  map.rs  movement.rs  player.rs  skills.rs  weapons.rs
src/engine/weapons/: blades.rs  guns.rs  weapon_stats.rs
src/player/: armor.rs
src/skills/: skillpoint.rs
src/storage/: armor_store.rs  batltlefields.rs  battlefields.rs  combatants.rs  entities.rs  middleware.rs  weapon_store.rs
src/types/: point.rs  skills.rs
src/weapons/: blades.rs  damage.rs  guns.rs  weapon_stats.rs
