[package]
name = "ribs"
version = "0.2.0"
edition = "2021"

[profile.release]
debug = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
chrono = { version = "0.4.24", features = ["serde"] }
percentage = "0.1.0"
rand = "0.8.5"
rocket = { version = "=0.5.0-rc.3", features = ["json", "secrets"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
