[package]
name = "ribs"
description = "A simple battle system with a simple REST API"
version = "0.3.2"
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
debug = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.5.1"
chrono = { version = "0.4.24", features = ["serde"] }
log = "0.4.19"
percentage = "0.1.0"
rand = "0.8.5"
rocket = { version = "=0.5.0-rc.3", features = ["json", "secrets"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", tag = "v1.0.0-beta.9" }
uuid = "1.3.4"
env_logger = "0.9.0"